JumpScript/tests/baselines/reference/parserErrorRecovery_ParameterList1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList1.jump(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList1.jump(1,14): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList1.jump(2,2): error TS1005: ')' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList1.jump (3 errors) ====
    function f(a {
             ~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
                 ~
!!! error TS1005: ',' expected.
    }
     
!!! error TS1005: ')' expected.